--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Blackbird
 APP_ENV=local
 APP_KEY=base64:Bzw7/3OlmwkYq644G66reJP90cL74VcHxGcsPhY4VEA=
 APP_DEBUG=true
-APP_URL=https://blackbird.test
+APP_URL=http://blackbird.test
 
 LOG_CHANNEL=stack
 
@@ -71,4 +71,3 @@ USE_GOOGLE=false
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT=https://vulcano.test/login/google/callback
-
