--- a/.env
+++ b/.env
@@ -71,3 +71,5 @@ USE_GOOGLE=false
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT=https://vulcano.test/login/google/callback
+
+EXTERNAL_IP=https://api.ipify.org
