--- a/.env
+++ b/.env
@@ -73,3 +73,9 @@ GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT=https://vulcano.test/login/google/callback
 
 EXTERNAL_IP=https://api.ipify.org
+
+# Deploy via Envoy
+DEPLOY_SERVER=nandosal@nandosalles.com
+DEPLOY_REPOSITORY=https://fsclaro:sSuj69sv7b@github.com/fsclaro/blackbird.git
+DEPLOY_PATH=/home/nandosal/blackbird
+DEPLOY_HEALTH_CHECK=http://nandosalles.com
