--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "spatie/laravel-backup": "^6.7",
         "spatie/laravel-medialibrary": "^7.14",
         "spatie/laravel-sluggable": "^2.2",
+        "unsplash/unsplash": "^2.5",
         "yajra/laravel-datatables-oracle": "^9.7"
     },
     "require-dev": {
