--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,15 +8,31 @@
             "name": "Listen for XDebug",
             "type": "php",
             "request": "launch",
-            "port": 9001
+            "port": 9000,
+            "stopOnEntry": true,
+            "pathMappings": {
+                "/home/nandosal/www/blackbird": "${workspaceRoot}/"
+            }
         },
+        {
+            "name": "Blackbird Remote XDebug",
+            "type": "php",
+            "request": "launch",
+            "port": 9000,
+            "stopOnEntry": true,
+            "pathMappings": {
+                "/home/nandosal/www/blackbird/": "${workspaceRoot}/",
+                "/app" : "${workspaceRoot}/app"
+            }
+        },
+
         {
             "name": "Launch currently open script",
             "type": "php",
             "request": "launch",
             "program": "${file}",
             "cwd": "${fileDirname}",
-            "port": 9001
+            "port": 9000
         }
     ]
 }
