--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "matt-allan/laravel-code-style": "^0.4.0",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "phpunit/phpunit": "^8.0",
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "config": {
         "optimize-autoloader": true,
