--- a/.env.producao
+++ b/.env.producao
@@ -2,7 +2,7 @@ APP_NAME=Blackbird
 APP_ENV=production
 APP_KEY=base64:Bzw7/3OlmwkYq644G66reJP90cL74VcHxGcsPhY4VEA=
 APP_DEBUG=true
-APP_URL=http://nandosalles.com
+APP_URL=http://blackbird.nandosalles.com
 
 LOG_CHANNEL=stack
 
@@ -50,27 +50,27 @@ ARCANEDEV_LOGVIEWER_MIDDLEWARE=web,auth,can.access.logviewer
 USE_GITHUB=true
 GITHUB_CLIENT_ID=a8acefa2837358c3e7fd
 GITHUB_CLIENT_SECRET=8f6919f17d7474fd52aa7e581053e546248bbabf
-GITHUB_REDIRECT=https://vulcano.test/login/github/callback
+GITHUB_REDIRECT=https://blackbird.nandosalles.com/login/github/callback
 
 USE_FACEBOOK=false
 FACEBOOK_CLIENT_ID=
 FACEBOOK_CLIENT_SECRET=
-FACEBOOK_REDIRECT=https://vulcano.test/login/facebook/callback
+FACEBOOK_REDIRECT=https://blackbird.nandosalles.com/login/facebook/callback
 
 USE_TWITTER=true
 TWITTER_CLIENT_ID=GIk0J97OwudN3hIsyUXWmo3yD
 TWITTER_CLIENT_SECRET=bnCgByIzbvicxaS2F3orfNrHLE02u3JKtfH7FLkmoULAWhytHJ
-TWITTER_REDIRECT=https://vulcano.test/login/twitter/callback
+TWITTER_REDIRECT=https://blackbird.nandosalles.com/login/twitter/callback
 
 USE_LINKEDIN=false
 LINKEDIN_CLIENT_ID=
 LINKEDIN_CLIENT_SECRET=
-LINKEDIN_REDIRECT=https://vulcano.test/login/linkedin/callback
+LINKEDIN_REDIRECT=https://blackbird.nandosalles.com/login/linkedin/callback
 
 USE_GOOGLE=false
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-GOOGLE_REDIRECT=https://vulcano.test/login/google/callback
+GOOGLE_REDIRECT=https://blackbird.nandosalles.com/login/google/callback
 
 EXTERNAL_IP=https://api.ipify.org
 
