--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,13 +8,7 @@
             "name": "Listen for XDebug",
             "type": "php",
             "request": "launch",
-            "port": 9000,
-            "env": {
-                "XDEBUG_CONFIG": "idekey=VSCODE"
-            },
-            "pathMappings": {
-                "/home/nandosal/www/blackbird": "${workspaceFolder}",
-            }
+            "port": 9000
         },
         {
             "name": "Launch currently open script",
