disable solialite login

--- a/.env
+++ b/.env
@@ -48,7 +48,7 @@ SWEET_ALERT_ANIMATION_ENABLE=true
 ARCANEDEV_LOGVIEWER_MIDDLEWARE=web,auth,can.access.logviewer
 
 # Socialite parameters
-USE_SOCIALITE=true
+USE_SOCIALITE=false
 
 GITHUB_CLIENT_ID=a8acefa2837358c3e7fd
 GITHUB_CLIENT_SECRET=8f6919f17d7474fd52aa7e581053e546248bbabf
