--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
-        "vue-template-compiler": "^2.6.10"
+        "vue-template-compiler": "^2.6.10",
+        "acorn": "^6.4.1"
     },
     "config": {
         "commitizen": {
