ajustes no .env

--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
-APP_NAME=Blackbird
+APP_NAME="Blackbird 7"
 APP_ENV=local
 APP_KEY=base64:Bzw7/3OlmwkYq644G66reJP90cL74VcHxGcsPhY4VEA=
 APP_DEBUG=true
-APP_URL=http://blackbird.test
+APP_URL=http://bb7.test
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=blackbird
+DB_DATABASE=bb7
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
